# CargoNightServer

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start_server.bat
migrations/: 20260505000000_init.sql  20260506000000_game_records.sql  20260506000001_friends.sql  20260506000002_short_ids.sql
src/: config.rs  db.rs  error.rs  main.rs
src/game/avalon/: ai.rs  engine.rs  mod.rs  roles.rs
src/handlers/: ai.rs  auth.rs  avalon.rs  chat.rs  friends.rs  games.rs  home.rs  mod.rs  profile.rs  rooms.rs
src/middleware/: auth.rs
src/models/: chat.rs  friend.rs  game.rs  game_record.rs  mod.rs  room.rs  user.rs
src/ws/: handler.rs  manager.rs  mod.rs  signaling.rs
